Fix Sam unit tests